# cinephoria

./: .gitignore  Makefile  README.md  cinephoria.sql  compose.override.yaml  compose.prod.yaml  compose.yaml
.github/workflows/: ci-tauri.yml  ci.yml  deploy.yml  release-tauri.yml  release.yml  test-release-tauri.yml
api/: .env  .env.dist  .env.test  .gitignore  .php-cs-fixer.dist.php  Dockerfile  composer.json  phpmd-ruleset.xml  phpstan-ci.neon  phpstan-src.neon  phpstan-tests.neon  phpstan.neon  phpunit.xml.dist
api/config/: bootstrap.php  bundles.php  routes.yaml  services.yaml
api/frankenphp/: Caddyfile
api/migrations/: Version20241027182842.php  Version20241031195613.php  Version20241103095913.php  Version20250117204919.php  Version20250121185422.php  Version20250131160958.php  Version20250131212358.php  Version20250210153329.php  Version20250302202031.php  Version20250801080854.php  Version20251005222646.php
api/src/: MediaObjectNormalizer.php
desktop_app/: .env.dist  Dockerfile_old  README.md  eslint.config.mjs  next.conf.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/src/: lib.rs
pwa/: .env.dist  .gitignore  Dockerfile  README.md  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
react_expo/: .env  Dockerfile_old  README.md  app.json  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json
(+331 files in other folders)
