[package]
name = "cinephoria_app"
version = "1.0.1"
description = ""Desktop application for Cinéphoria employees to report and manage incidents related to the facilities"
authors = ["Aurélie Gramusset"]
license = "MIT"
repository = "https://github.com/Aurelie-feyzin/cinephoria"
edition = "2025"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "^2"
